<resources>
    <string name="boardtishi">上下拖动可调整看板中卡片的前后顺序\n开关控制卡片在看板中的显示或隐藏</string>
    <string name="请输入正确的手机号">请输入正确的手机号</string>
    <string name="重新获取验证码">重新获取验证码</string>
    <string name="请输入正确的验证码">请输入正确的验证码</string>
    <string name="发送成功">发送成功</string>
    <string name="小通您的语音开单助手">小通-您的语音开单助手</string>
    <string name="XX秒后停止录音">60秒后停止录音</string>
    <string name="AI识别结果">AI识别结果</string>
    <string name="AI智能识别仅用于辅助开单无法确保准确性请根据实际修改" translatable="false">AI智能识别仅用于辅助开单，无法确保准确性;请根据实际修改。</string>
    <string name="列名匹配">列名匹配</string>
    <string name="语言识别信息1">您可以通过语音，结合您实际商品进行语音开单</string>
    <string name="语言识别信息2">(以下为示例，请结合您实际商品进行AI开单)</string>
    <string name="语言识别示例1">示例1:娃哈哈5瓶3块钱，8箱曲奇饼干，糖豆200克装10包48块钱</string>
    <string name="语言识别示例2">示例2:开一张爆米花5桶，单价8块钱，雪碧8箱，巧克力3包，总价60块钱</string>
    <string name="文本识别提示">娃哈哈5瓶3块钱\n可乐8瓶1.16—瓶\n8箱曲奇饼干\n巧克力200克装3包单价60元\n榴莲糖2包\n</string>
    <string name="添加关键词">添加关键词</string>
    <string name="退回">退回</string>
    <string name="其它可用设备">其它可用设备</string>
    <string name="匹配的设备">匹配的设备</string>
    <string name="选择蓝牙设备">选择蓝牙设备</string>
    <string name="电话3">电话3</string>
    <string name="输入名称">输入名称</string>
    <string name="本地相册选择">本地相册选择</string>
    <string name="请前往设置开启定位服务">请前往设置开启定位服务</string>
    <string name="退货仓库">退货仓库</string>
    <string name="表头设置">表头设置</string>
    <string name="不允许超库存量出库以下商品库存不足">不允许超库存量出库，以下商品库存不足</string>
    <string name="换算关系">换算关系</string>
    <string name="不再提示">不再提示</string>
    <string name="刷价将按照客户价格优先级自动改价若不存在价格优先级则当前价格不变">刷价将按照客户价格优先级自动改价。若不存在价格优先级，则当前价格不变</string>
    <string name="是否确定刷价">是否确定刷价</string>
    <string name="链科打印云盒">链科打印云盒</string>
    <string name="继续新增">继续新增</string>
    <string name="新增成功">新增成功</string>
    <string name="搜索序列号">搜索序列号</string>
    <string name="要货申请查询">要货申请查询</string>
    <string name="收付金额">收付金额</string>
    <string name="输入往来单位编号名称简拼">输入往来单位编号/名称/简拼</string>
    <string name="单据列表">单据列表</string>
    <string name="输入编号名称规格型号简拼条码">输入编号/名称/规格/型号/简拼/条码</string>
    <string name="组合商品">组合商品</string>
    <string name="跟车员">跟车员</string>
    <string name="购物车是空的哦">购物车是空的哦~</string>
    <string name="商机客户信息">商机客户信息</string>
    <string name="区域分配">区域分配</string>
    <string name="发货区域">发货区域</string>
    <string name="同品换货">同品\n换货</string>
    <string name="种数量">种,数量</string>
    <string name="按类别">按类别</string>
    <string name="按明细">按明细</string>
    <string name="按汇总">按汇总</string>
    <string name="种口味数量">种口味，数量</string>
    <string name="已选">已选</string>
    <string name="按客户">按客户</string>
    <string name="按业务员">按业务员</string>
    <string name="拜访状态">拜访状态</string>
    <string name="合计未拜访次数">合计未拜访次数</string>
    <string name="合计已拜访次数">合计已拜访次数</string>
    <string name="合计月拜访次数">合计月拜访次数</string>
    <string name="合计完成率">合计完成率</string>
    <string name="自定义字段1">自定义字段1</string>
    <string name="总未结">总未结</string>
    <string name="查询日期">查询日期</string>
    <string name="批次信息">批次信息</string>
    <string name="商品明细">商品明细</string>
    <string name="继续拜访">继续拜访</string>
    <string name="本周期进度">本周期进度</string>
    <string name="签退成功">签退成功</string>
    <string name="申请人">申请人</string>
    <string name="关联客户">关联客户</string>
    <string name="申请类型">申请类型</string>
    <string name="申请票据">申请票据</string>
    <string name="申请金额">申请金额</string>
    <string name="使用日期">使用日期</string>
    <string name="项目说明">项目说明</string>
    <string name="通过">通过</string>
    <string name="否决">否决</string>
    <string name="撤销">撤销</string>
    <string name="项目">项目</string>
    <string name="分享二维码">分享二维码</string>
    <string name="注意">注意</string>
    <string name="仅显示从未拜访的客户">仅显示从未拜访的客户</string>
    <string name="仅显示超期未拜访的客户">仅显示超期未拜访的客户</string>
    <string name="仅显示超期未开单的客户">仅显示超期未开单的客户</string>
    <string name="仅显示从未开单的客户">仅显示从未开单的客户</string>
    <string name="请输入验货数量">请输入验货数量</string>
    <string name="品牌预收明细">品牌预收明细</string>
    <string name="自定义时间查询">自定义时间查询</string>
    <string name="品牌应收明细">品牌应收明细</string>
    <string name="刷价">刷价</string>
    <string name="历史销售">历史销售</string>
    <string name="项目名称">项目名称</string>
    <string name="请输入快码">请输入快码</string>
    <string name="未补录">未补录</string>
    <string name="补录状态">补录状态</string>
    <string name="补录查询">补录查询</string>
    <string name="明细">明细</string>
    <string name="有效期">有效期</string>
    <string name="批次录入">批次录入</string>
    <string name="还货记录">还货记录</string>
    <string name="还货详情">还货详情</string>
    <string name="客户选择器">客户选择器</string>
    <string name="商品选择器">商品选择器</string>
    <string name="选择器显示字段配置">选择器显示字段配置</string>
    <string name="其它账户收款">其它账户收款</string>
    <string name="按品牌结算">按品牌结算</string>
    <string name="品牌收款">品牌收款</string>
    <string name="赠送">赠送</string>
    <string name="单位关系">单位关系</string>
    <string name="相机">相机</string>
    <string name="蓝牙">蓝牙</string>
    <string name="位置">位置</string>
    <string name="录音">录音</string>
    <string name="分钟">分钟</string>
    <string name="文件查看">文件查看</string>
    <string name="文件写入">文件写入</string>
    <string name="存储空间">存储空间</string>
    <string name="位置信息">位置信息</string>
    <string name="拍照权限">拍照权限</string>
    <string name="开启XX">开启%s</string>
    <string name="请允许管家婆物联通访问您的录音若不允许您将无法使用语音识别功能">请允许“管家婆物联通”访问您的录音；若不允许，您将无法使用语音识别功能。</string>
    <string name="请允许管家婆物联通访问您的蓝牙若不允许您将无法使用连接打印机功能">请允许“管家婆物联通”访问您的蓝牙；若不允许，您将无法使用连接打印机功能。</string>
    <string name="请允许管家婆物联通访问您的位置若不允许您将无法使用定位签到功能">请允许“管家婆物联通”访问您的位置；若不允许，您将无法使用定位签到功能。</string>
    <string name="请允许管家婆物联通访问您的存储若不允许您将无法使用文件相关功能">请允许“管家婆物联通”访问您的存储；若不允许，您将无法使用文件相关功能。</string>
    <string name="为了您能正常使用XX需要以下权限">为了您能正常使用%s，需要以下权限</string>
    <string name="请允许获取XX">请允许获取%s</string>
    <string name="我们需要获取XX否则您将无法正常使用XX">我们需要获取%1$s, 否则您将无法正常使用%2$s</string>
    <string name="由于XX无法获取XX不能正常运行请开启权限后再使用设置路径应用管理XX权限">"由于%1$s无法获取%2$s, 不能正常运行, 请开启权限后再使用。\n\n设置路径: 应用管理->%3$s->权限"</string>
    <string name="拒绝">拒绝</string>
    <string name="去设置">去设置</string>
    <string name="合计结算金额XX取各收款账户合计金额不允许超出本单应收XX">合计结算金额【%1$s】（取各收款账户合计金额）不允许超出本单应收【%2$s】</string>
    <string name="单据不允许欠款请先全额结算">单据不允许欠款，请先全额结算</string>
    <string name="本单应收为负合计收款金额不能大于0">本单应收为负，合计收款金额不能大于0</string>
    <string name="本单应收为正合计收款金额不能小于0">本单应收为正，合计收款金额不能小于0</string>
    <string name="本单未收款不支持抹零">本单未收款，不支持抹零</string>
    <string name="支付通账户不支持退款请切换为其他账户">支付通账户不支持退款，请切换为其他账户</string>
    <string name="切换仓库将清除销售批次数据是否继续">切换仓库将清除销售批次数据，是否继续</string>
    <string name="不支持多账户收款">不支持多账户收款</string>
    <string name="切换其他往来单位将清除已调单数据是否继续">切换其他往来单位将清除已调单数据，是否继续</string>
    <string name="科目名称编号简拼">科目名称/编号/简拼</string>
    <string name="账户名称编号简拼">账户名称/编号/简拼</string>
    <string name="费用账户">费用账户</string>
    <string name="切换其他机构将清除已调单数据是否继续">切换其他机构将清除已调单数据，是否继续</string>
    <string name="合计结算金额">合计结算金额</string>
    <string name="请输入正确的手机号码">请输入正确的手机号码!</string>
    <string name="请输入正确的使用人">请输入正确的使用人!</string>
    <string name="进行一键抹零">进行一键抹零</string>
    <string name="支持一键单账户全额结算">支持一键单账户全额结算</string>
    <string name="支持查看支付宝微信收款码">支持查看支付宝、微信收款码</string>
    <string name="请联系管理员在物联通后台业务录单配置中设置微信支付通二维码">请联系管理员在物联通后台【业务录单配置】中设置微信、支付通二维码</string>
    <string name="应收上限为XX">应收上限为%1$s</string>
    <string name="往来余额为XX">往来余额为%1$s</string>
    <string name="不允许开单">不允许开单</string>
    <string name="网络错误删除失败是否重新删除">网络错误，删除失败，是否重新删除？</string>
    <string name="销售退货单">销售退货单</string>
    <string name="一般费用单">一般费用单</string>
    <string name="收款单摘要">收款单摘要</string>
    <string name="费用单摘要">费用单摘要</string>
    <string name="退货单摘要">退货单摘要</string>
    <string name="换货">换货</string>
    <string name="销售单摘要">销售单摘要</string>
    <string name="添加失败XX是否重新提交">添加失败，%1$s，是否重新提交？</string>
    <string name="确定取消发货">确定取消发货？</string>
    <string name="取消失败">取消失败</string>
    <string name="取消成功">取消成功</string>
    <string name="合格">合格</string>
    <string name="不合格">不合格</string>
    <string name="无允许开单下拉单价时选价权限">无允许开单下拉单价时选价权限</string>
    <string name="低于最低售价">低于最低售价</string>
    <string name="零单价">零单价</string>
    <string name="库存不足">库存不足</string>
    <string name="商品未完成数量超过库存数量将以库存数量调用">商品未完成数量超过库存数量，将以库存数量调用</string>
    <string name="详情">详情</string>
    <string name="您的联系方式选填">您的联系方式（选填）</string>
    <string name="请输入您的宝贵建议或意见必填">请输入您的宝贵建议或意见（必填）</string>
    <string name="请输入优惠金额">请输入优惠金额</string>
    <string name="请输入">请输入</string>
    <string name="无">无</string>
    <string name="调">调</string>
    <string name="购物车中已添加商品确定退出吗">购物车中已添加商品,确定退出吗?</string>
    <string name="未完成数量XX">未完成数量：%1$s</string>
    <string name="未订货数量XX">未订货数量：%1$s</string>
    <string name="调其他机构往来单位的单据时将清除已调单数据是否继续">调其他机构、往来单位的单据时将清除已调单数据，是否继续</string>
    <string name="不支持添加非工作台签到客户XX的单据">不支持添加非工作台签到客户【%1$s】的单据</string>
    <string name="获取表头参数失败">获取表头参数失败</string>
    <string name="不支持调用多张单据">不支持调用多张单据</string>
    <string name="存在XX的商品请检查">存在%1$s的商品，请检查</string>
    <string name="最多可添加XX张照片">最多可添加%1$s张照片</string>
    <string name="提交单据中">提交单据中…</string>
    <string name="不在登录时间范围内不允许提交单据登录时间为XX">不在登录时间范围内，不允许提交单据，登录时间为：%1$s</string>
    <string name="删除失败XX是否重新删除">删除失败，%1$s，是否重新删除？</string>
    <string name="切换XX将会根据价格优先级重新获取商品价格是否继续">切换%1$s将会根据价格优先级重新获取商品价格，是否继续</string>
    <string name="切换XX将会做以下处理是否继续1根据价格优先级重新获取商品价格2清除表身中由于切换XX导致不再适用的搭赠方案中的商品及赠品">切换%1$s将会做以下处理，是否继续\n1. 根据价格优先级重新获取商品价格\n2. 清除表身中，由于切换%2$s导致不再适用的搭赠方案中的商品及赠品</string>
    <string name="正在下载">正在下载</string>
    <string name="正在下载语音引擎请稍候">正在下载语音引擎，请稍候...</string>
    <string name="搭赠价">搭赠价</string>
    <string name="请选择借款账户">请选择借款账户</string>
    <string name="请输入借款金额">请输入借款金额</string>
    <string name="此数据由管家婆物联通提供">此数据由管家婆物联通提供</string>
    <string name="单号更新成功新的单号为XX">单号更新成功，新的单号为：%s</string>
    <string name="以下商品货位相同需编辑不同后才能提交是否前往编辑">以下商品货位相同，需编辑不同后才能提交，是否前往编辑？</string>
    <string name="转出账户第XX行中金额为0">转出账户第%s行中金额为0！</string>
    <string name="转入账户第XX行中金额为0">转入账户第%s行中金额为0！</string>
    <string name="表体第XX行中金额为0">表体第%s行中金额为0！</string>
    <string name="不能小于">不能小于</string>
    <string name="表体总金额与退补金额合计必须大于0">表体总金额与退补金额合计必须大于0</string>
    <string name="请选择价格方式">请选择价格方式</string>
    <string name="结算金额不等于单据金额确定继续吗">结算金额不等于单据金额，确定继续吗</string>
    <string name="当前单据已支付通收款不支持重复提交">当前单据已支付通收款,不支持重复提交</string>
    <string name="正在校验最低售价">正在校验最低售价</string>
    <string name="微信扫码">微信扫码</string>
    <string name="切换结算单位将清除结算数据是否继续">切换结算单位将清除结算数据，是否继续？</string>
    <string name="以下商品管理批次或序列号需编辑完整信息才能提交是否前往编辑">以下商品管理批次或序列号，需编辑完整信息才能提交，是否前往编辑？</string>
    <string name="该单据非XX">该单据非%s</string>
    <string name="请在后台设置收款码">请在后台设置收款码</string>
    <string name="支付宝扫码">支付宝扫码</string>
    <string name="单据类型有误请扫描销售订单">单据类型有误，请扫描销售订单</string>
    <string name="单据类型有误请扫描订单类">单据类型有误，请扫描订单类</string>
    <string name="单据类型有误请扫描进货订单">单据类型有误，请扫描进货订单</string>
    <string name="审核中的XX未参与配送请先在物联通后台的配送业务配置配送单据方式中设置该类型">审核中的%1$s未参与配送，请先在物联通后台的【配送业务配置】-【配送单据方式】中设置该类型</string>
    <string name="XX状态的XX未参与配送请先在物联通后台的配送业务配置配送单据方式中设置该类型">%1$s状态的%2$s未参与配送，请先在物联通后台的【配送业务配置】-【配送单据方式】中设置该类型</string>
    <string name="本单已提交请前往订单查询中修改">本单已提交，请前往订单查询中修改</string>
    <string name="本单已过账不支持修改">本单已过账，不支持修改</string>
    <string name="本单已提交请前往草稿查询中修改">本单已提交请前往草稿查询中修改</string>
    <string name="本单据已提交不支持修改">本单据已提交，不支持修改</string>
    <string name="不能少于1份">不能少于1份</string>
    <string name="不能多于10份">不能多于10份</string>
    <string name="本单已打印XX次用户无打印后删除权限">本单已打印：$s次,用户无打印后删除权限!</string>
    <string name="请到物联通后台的打印配置蓝牙打印组中为当前用户设置打印样式并APP档案同步后重试">请到物联通后台的【打印配置】-【蓝牙打印组】中为当前用户设置打印样式，并APP档案同步后重试</string>
    <string name="请到物联通后台的打印配置蓝牙打印组中为当前用户设置打印组并APP档案同步后重试">请到物联通后台的【打印配置】-【蓝牙打印组】中为当前用户设置打印组，并APP档案同步后重试</string>
    <string name="得实1900">得实1900</string>
    <string name="无法识别XX的XX打印样式请前往网页端修改后打印">无法识别%1$s的【%2$s】打印样式，请前往网页端修改后打印</string>
    <string name="日期">日期</string>
    <string name="今日">今日</string>
    <string name="昨日">昨日</string>
    <string name="本周">本周</string>
    <string name="本月">本月</string>
    <string name="上周">上周</string>
    <string name="上月">上月</string>
    <string name="本季度">本季度</string>
    <string name="上季度">上季度</string>
    <string name="本年">本年</string>
    <string name="自定义">自定义</string>
</resources>